--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8344,6 +8344,10 @@ video {
   z-index: auto;
 }
 
+.text-red-branded {
+  color: rgb(196, 22, 54);
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
