--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,4 +1,4 @@
-section {
+.page section {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
@@ -8,7 +8,7 @@ section {
   color: #333;
 }
 
-h2 {
+.page h2 {
   font-weight: 900;
   font-size: 32px;
   line-height: 1;
@@ -17,25 +17,25 @@ h2 {
   vertical-align: top;
 }
 
-p {
+.page p {
   margin: 1em 0;
 }
 
-a {
+.page a {
   text-decoration: none;
   color: #1ea7fd;
 }
 
-ul {
+.page ul {
   padding-left: 30px;
   margin: 1em 0;
 }
 
-li {
+.page li {
   margin-bottom: 8px;
 }
 
-.tip {
+.page .tip {
   display: inline-block;
   border-radius: 1em;
   font-size: 11px;
@@ -48,14 +48,14 @@ li {
   vertical-align: top;
 }
 
-.tip-wrapper {
+.page .tip-wrapper {
   font-size: 13px;
   line-height: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-.tip-wrapper svg {
+.page .tip-wrapper svg {
   display: inline-block;
   height: 12px;
   width: 12px;
@@ -64,6 +64,6 @@ li {
   margin-top: 3px;
 }
 
-.tip-wrapper svg path {
+.page .tip-wrapper svg path {
   fill: #1ea7fd;
 }
